--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,9 @@ table {
 }
 
 /*common rules*/
+body {
+    background-color: #FFF;
+}
 a {
     text-decoration: none;
     color: #3B3B3B;
@@ -53,6 +56,9 @@ a {
     display: block;
     clear: both;
 }
+img {
+    border: none;
+}
 
 /*container styles*/
 
@@ -60,17 +66,59 @@ a {
     width: 960px;
     margin: 0 auto;
 }
-
+.wrapper {
+    min-width: 1000px;
+}
 .top-header {
+    width: 100%;
     height: 35px;
     background: transparent url('../images/top_header.png') 0 0 repeat-x;
 }
 .top-header-links {
-    width: 500px;
+    width: 520px;
     float: right;
 }
+.top-header-links .currencies {
+    position: relative;
+    top:-1px;
+    font: normal 8.41px 'Oxygen', sans-serif;
+    padding: 0px 20px 0px 5px;
+    background: #FFF url('../images/currency-switch.png') right center no-repeat;
+}
+.currencies .active-currency {
+    display: inline-block;
+    color: #747474;
+    font: normal 8.41px 'Oxygen', sans-serif;
+}
+.top-header-links .currencies:hover > ul.dropdown {
+    display: block;
+}
+.top-header-links .dropdown {
+    position: absolute;
+    display: none;
+    top: 10px;
+    width: 100%;
+    right: 0;
+    background-color: #FFF;
+}
+.top-header-links .dropdown li {
+    display: block;
+    margin: 0;
+    padding: 5px;
+    text-align: left;
+}
+.top-header-links .dropdown li.last {
+    padding-top: 0;
+}
+.top-header-links .dropdown li a {
+    font-size: 10px;
+    font-weight: bold;
+    color: #747474;
+}
 .logo-header {
-    height: 85px;
+    height: 60px;
+    margin-bottom: 27px;
+    padding-top: 25px;
     background-color: #c32929;
 }
 
@@ -79,8 +127,8 @@ a {
 }
 .top-header-links li {
     display: inline-block;
+    padding-top: 10px;
     margin-left: 17px;
-    line-height: 35px;
     color: #FFF;
 }
 .top-header-links li,
@@ -94,20 +142,277 @@ a {
 }
 
 .logo {
-    width: 280px;
+    width: 252px;
     float: left;
     margin-right: 25px;
 }
-.logo h1 {
-    font: bold 26px 'Oxygen', sans-serif;
-    color: #FFF;
-    text-transform: uppercase;
+.logo img {
+    border: none;
 }
 .search {
     width: 530px;
+    margin-right: 30px;
     float: left;
 }
+.search-box {
+    width: 411px;
+    height: 13px;
+    overflow: visible;
+    padding: 9px 18px;
+    margin-right: 8px;
+    border: 1px solid #A5A5A5;
+    outline: none;
+    font: bold 11.77px 'Oxygen', sans-serif;
+    text-transform: uppercase;
+    color: #111;
+}
+.search-btn {
+    width: 64px;
+    height: 33px;
+    padding: 0;
+    background: #961313 url('../images/search-btn.png') center center no-repeat;
+    border: none;
+    outline: none;
+    text-indent: -9999px;
+}
 .social-links {
-    width: 125px;
+    width: 122px;
+    padding-top: 10px;
     float: right;
+}
+.social-links li {
+    display: inline-block;
+}
+.social-links li a {
+    display: block;
+    height: 17px;
+    margin-left: 5px;
+    text-indent: -9999px;
+}
+.social-links li .google {
+    width: 17px;
+    background: transparent url('../images/social-icons.png') 0 0 no-repeat;
+}
+.social-links li .fb {
+    width: 10px;
+    background: transparent url('../images/social-icons.png') -28px 0 no-repeat;
+}
+.social-links li .twitter {
+    width: 16px;
+    background: transparent url('../images/social-icons.png') -52px 0 no-repeat;
+}
+.social-links li .yt {
+    width: 43px;
+    background: transparent url('../images/social-icons.png') -80px 0 no-repeat;
+}
+
+/*main nav styles*/
+
+.nav {
+    background-color: #b2b2b2;
+    font-size: 0;
+}
+.nav .active {
+    background-color: #c32929;
+}
+.nav li {
+    display: inline-block;
+    border-right: 1px solid #FFFFFF;
+}
+.nav .last {
+    border-right: none;
+}
+.nav a {
+    display: inline-block;
+    padding: 9px 30px;
+    text-transform: uppercase;
+    text-align: center;
+    font: bold 12px 'Oxygen', sans-serif;
+    color: #FFF;
+}
+.nav a:hover {
+    background-color: #c32929;
+}
+
+/*offer styles*/
+
+.offer {
+    margin: 30px 0;
+    height: 133px;
+    background-color: #020202;
+}
+.offer-book {
+    height: 100%;
+}
+.offer-img {
+    width: 660px;
+    float: left;
+}
+.offer-desc {
+    width: 230px;
+    padding-right: 70px;
+    float: left;
+}
+.offer-desc p {
+    padding: 15px 0;
+    margin: 0;
+    font: bold 13px 'Oxygen', sans-serif;
+    color: #FEFEFE;
+}
+.promo-link {
+    font: bold italic 14px 'Oxygen', sans-serif;
+    color: #FEFEFE;
+}
+
+/*slideshow styles*/
+.active-slide {
+    position: relative;
+    float: left;
+    width: 773px;
+    height: 339px;
+    margin: 0 12px 25px 0;
+    border: 1px solid #F7F6F6;
+    background-color: #FFF;
+}
+.active-slide-info {
+    position: absolute;
+    width: 394px;
+    height: 159px;
+    top: 50%;
+    left: 50%;
+    margin-top: -79.5px;
+    margin-left: -197px;
+    background-color: rgba(219, 221, 222, 0.45);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#4cD8DADB, endColorstr=#4cD8DADB)";
+}
+.active-slide-info h3 {
+    margin-top: 37px;
+    font: normal 35px 'Oxygen', sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+    color: #C32929;
+}
+.slide-thumbs {
+    width: 171px;
+    float: right;
+}
+.slide-thumbs li {
+    margin-bottom: 5px;
+}
+.slide-thumbs li.last {
+    margin-bottom: 0;
+}
+.active-thumb {
+    position: relative;
+}
+.active-thumb span.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.6);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
+}
+
+.active-thumb:after {
+    content: " ";
+    position: absolute;
+    height: 0;
+    width: 0;
+    margin-top: -7px;
+    right: 100%;
+    top: 50%;
+    border: solid transparent;
+    border-color: rgba(61, 62, 62, 0);
+    border-right-color: #3D3E3E;
+    border-width: 7px;
+}
+
+/*our books section*/
+
+.sub-header {
+    margin-bottom: 22px;
+    font: normal 18.05px Tahoma, sans-serif;
+    text-transform: uppercase;
+    color: #1A1A1A;
+}
+.our-books {
+    margin-bottom: 40px;
+}
+.our-books .item {
+    width: 78px;
+    height: 116px;
+    margin-right: 32px;
+    float: left;
+}
+.our-books .item.last {
+    margin-right: 0;
+}
+
+/*footer*/
+
+.footer-headers {
+    height: 44px;
+    padding: 2px 0 3px 0;
+    margin-bottom: 20px;
+    border-top: 1px solid #BEBEBE;
+    border-bottom: 1px solid #BEBEBE;
+}
+.footer-headers .col.payment {
+    padding-top: 12px;
+}
+.footer-headers .col {
+    float: left;
+    font: normal 18px 'Oxygen', sans-serif;
+    text-align: left;
+    text-transform: uppercase;
+    color: #222222;
+}
+.footer-menus {
+    margin-bottom: 16px;
+}
+.footer-menus li a {
+    font: normal 11px 'Oxygen', sans-serif;
+    text-transform: uppercase;
+    color: #616161;
+}
+.footer-menus .col {
+    float: left;
+}
+.footer-links .col-1 {
+    width: 218px;
+}
+.footer-links .col-2 {
+    width: 293px;
+}
+.footer-links .col-3 {
+    width: 195px;
+}
+.footer-links .col-4 {
+    width: 110px;
+}
+.footer-menus .col.social-media li {
+    margin-bottom: 15px;
+}
+.footer-menus .col.social-media li.last {
+    margin-bottom: 0;
+}
+.footer-menus .col.cx-service li {
+    margin-bottom: 3px;
+}
+.footer-menus .col.cx-service li.last {
+    margin-bottom: 0;
+}
+.footer {
+    height: 25px;
+    border-top: 1px solid #BEBEBE;
+    background-color: #961313;
+}
+.footer .container {
+    padding-top: 8px;
+    text-align: right;
+    font: normal 9px 'Oxygen', sans-serif;
+    color: #F1F1F1;
 }
