features to create, list new products, minor style tweaks (forms, tables)

--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,43 @@ h1 {
     margin-top: 200px;
     text-align: center;
 }
+input[type="text"].large,
+textarea.large {
+    width: 700px;
+}
+textarea.large {
+    height: 70px;
+}
+textarea.xlarge {
+    width: 700px;
+    height: 280px;   
+}
+.form .col-1 input[type="text"] {
+    width: 100px;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    font: normal 14px 'Oxygen', sans-serif;
+}
+td, th {
+    color: #555;
+    padding: 7px;
+    border-bottom: 1px solid #DDD;
+}
+th {
+    border-bottom: 2px solid #DDD;
+    font: bold 12px 'Oxygen', sans-serif;
+    text-align: left;
+}
+tr:hover {
+    background-color: #F5F5F5;
+}
+td a {
+    color: #961313;
+}
+
 
 /*container styles*/
 
@@ -256,10 +293,10 @@ input[type="text"].search-box {
     position: relative;
 }
 .admin-links {
-    min-width: 200px;
+    min-width: 170px;
     position: absolute;
     top: 35px;
-    left: -50px;
+    left: -30px;
     display: none;
     border-radius: 0 0 5px 5px;
     background: transparent url('../images/top_header.png');
@@ -468,6 +505,11 @@ input[type="text"].search-box {
     font: normal 13px 'Oxygen', sans-serif;
     color: #666;
 }
+.form .col-1 {
+    float: left;
+    width: 120px;
+    margin-right: 20px;
+}
 .form li {
     margin-bottom: 20px;
 }
@@ -534,4 +576,36 @@ input[type="checkbox"] {
 }
 .bg-danger {
     background-color: #f2dede;
+}
+
+
+.product-categories {
+    width: 380px;
+    margin-top: 2px;
+    padding: 10px;
+    border: 1px solid #BDC7D8;
+    border-radius: 4px;
+}
+.product-categories label {
+    display: block;
+    margin-bottom: 5px;
+}
+.product-categories label.last {
+    margin-bottom: 0;
+}
+
+.pagination {
+    margin-top: 20px;
+    font-size: 0;
+}
+.pagination a,
+.pagination strong {
+    display: inline-block;
+    padding: 6px 12px;
+    border: 1px solid #DDD;
+    font: normal 13px 'Oxygen', sans-serif;
+    color: #961313;
+}
+.pagination strong {
+    color: #555;
 }
