--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,14 @@ h1 {
     font: normal 25px 'Oxygen', sans-serif;
     color: #666;
 }
+input[type="text"],
+textarea {
+    font: normal 13px 'Oxygen', sans-serif;
+    color: #222;
+}
+textarea {
+    line-height: 150%;
+}
 .error-404 h1 {
     margin-top: 200px;
     text-align: center;
@@ -590,7 +598,7 @@ input[type="checkbox"] {
     display: block;
     margin-bottom: 5px;
 }
-.product-categories label.last {
+.product-categories label:last-child {
     margin-bottom: 0;
 }
 
