products listing dynamic data integration, favicon, lightbox integration

--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ textarea.large {
 }
 textarea.xlarge {
     width: 700px;
-    height: 280px;   
+    height: 280px;
 }
 .form .col-1 input[type="text"] {
     width: 100px;
@@ -525,8 +525,8 @@ input[type="text"].search-box {
 .form li {
     margin-bottom: 20px;
 }
-input[type="text"], 
-input[type="password"], 
+input[type="text"],
+input[type="password"],
 textarea {
     width: 300px;
     margin: 0;
@@ -553,7 +553,7 @@ select {
     border-radius: 4px;
     outline: none;
 }
-input[type="radio"], 
+input[type="radio"],
 input[type="checkbox"] {
     margin: 0 5px 2px 0;
 }
@@ -705,7 +705,7 @@ input[type="checkbox"] {
 }
 .product-price {
     font: bold 15px 'Oxygen', sans-serif;
-    text-align: center;   
+    text-align: center;
     color: #961313;
 }
 .product-price .original-price {
@@ -715,3 +715,345 @@ input[type="checkbox"] {
     text-decoration: line-through;
     color: #666;
 }
+
+/*product main page*/
+
+.px-page {
+    margin-top: 20px;
+}
+.px-cover {
+    width: 250px;
+    float: left;
+    margin-right: 25px;
+}
+.px-cover img {
+    border-radius: 3px;
+    min-width: 250px;
+    max-width: 250px;
+}
+.px-info {
+    width: 685px;
+    float: left;
+}
+.px-info h1 {
+    margin: -5px 0 5px 0;
+}
+.px-author {
+    font: normal 12px 'Oxygen', sans-serif;
+    color: #888;
+}
+.px-author-name {
+    color: #961313;
+}
+.px-price {
+    width: 300px;
+    float: left;
+    margin: 25px 0;
+}
+.px-actions {
+    width: 300px;
+    float: left;
+    margin: 25px 0 0 20px;
+}
+.px-actions li {
+    margin-bottom: 7px;
+}
+.px-original-price {
+    margin-bottom: 7px;
+    font: bold 15px 'Oxygen', sans-serif;
+    text-decoration: line-through;
+    color: #888;
+}
+.px-sale-price {
+    font: bold 23px 'Oxygen', sans-serif;
+    color: #961313;
+}
+.px-status {
+    font: normal 13px 'Oxygen', sans-serif;
+    color: #6bad50;
+}
+.px-readable {
+    margin: 15px 0;
+}
+.px-readable a {
+    font: normal 12px 'Oxygen', sans-serif;
+    line-height: 170%;
+    color: #444;
+}
+.px-checkout-btn {
+    margin: 35px 0;
+}
+.px-checkout-btn a {
+    margin: 0;
+    padding: 10px 50px;
+    border: 1px solid #FFF;
+    background-color: #C32929;
+    color: #FFF;
+    text-transform: uppercase;
+    font: bold 16px 'Oxygen', sans-serif;
+    border-radius: 5px;
+    outline: none;
+}
+.px-checkout-btn a:hover {
+    background-color: #C43232;
+}
+.px-summary {
+    width: 400px;
+    float: left;
+    margin-right: 20px;
+    font: normal 13px 'Oxygen', sans-serif;
+    line-height: 170%;
+}
+.px-details {
+    margin-bottom: 20px;
+    font: normal 13px 'Oxygen', sans-serif;
+    line-height: 170%;
+}
+.px-details p {
+    margin: 15px 0;
+}
+.px-summary h2,
+.px-details h2,
+.px-related h3 {
+    margin-bottom: 8px;
+    font: bold 14px 'Oxygen', sans-serif;
+    color: #666;
+}
+.px-related h3 {
+    font: bold 13px 'Oxygen', sans-serif;
+    margin-bottom: 15px;
+}
+.px-gallery-summary {
+    margin: 25px 0 15px 0;
+}
+.px-gallery {
+    width: 495px;
+    float: left;
+}
+.px-gallery-img {
+    width: 98px;
+    height: 98px;
+    border: 1px solid #EEE;
+    float: left;
+    margin: 0 15px 15px 0;
+    text-align: center;
+}
+.px-gallery-img img {
+    max-height: 98px;
+}
+
+
+/*lighbox effects*/
+
+body:after {
+  content: url(../images/lightbox/close.png) url(../images/lightbox/loading.gif) url(../images/lightbox/prev.png) url(../images/lightbox/next.png);
+  display: none;
+}
+
+.lightboxOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  background-color: black;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  opacity: 0.8;
+  display: none;
+}
+
+.lightbox {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  z-index: 10000;
+  text-align: center;
+  line-height: 0;
+  font-weight: normal;
+}
+
+.lightbox .lb-image {
+  display: block;
+  height: auto;
+  max-width: inherit;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+}
+
+.lightbox a img {
+  border: none;
+}
+
+.lb-outerContainer {
+  position: relative;
+  background-color: white;
+  *zoom: 1;
+  width: 250px;
+  height: 250px;
+  margin: 0 auto;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+}
+
+.lb-outerContainer:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.lb-container {
+  padding: 4px;
+}
+
+.lb-loader {
+  position: absolute;
+  top: 43%;
+  left: 0;
+  height: 25%;
+  width: 100%;
+  text-align: center;
+  line-height: 0;
+}
+
+.lb-cancel {
+  display: block;
+  width: 32px;
+  height: 32px;
+  margin: 0 auto;
+  background: url(../images/lightbox/loading.gif) no-repeat;
+}
+
+.lb-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
+}
+
+.lb-container > .nav {
+  left: 0;
+}
+
+.lb-nav a {
+  outline: none;
+  background-image: url('data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==');
+}
+
+.lb-prev, .lb-next {
+  height: 100%;
+  cursor: pointer;
+  display: block;
+}
+
+.lb-nav a.lb-prev {
+  width: 34%;
+  left: 0;
+  float: left;
+  background: url(../images/lightbox/prev.png) left 48% no-repeat;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  -webkit-transition: opacity 0.6s;
+  -moz-transition: opacity 0.6s;
+  -o-transition: opacity 0.6s;
+  transition: opacity 0.6s;
+}
+
+.lb-nav a.lb-prev:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+
+.lb-nav a.lb-next {
+  width: 64%;
+  right: 0;
+  float: right;
+  background: url(../images/lightbox/next.png) right 48% no-repeat;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  -webkit-transition: opacity 0.6s;
+  -moz-transition: opacity 0.6s;
+  -o-transition: opacity 0.6s;
+  transition: opacity 0.6s;
+}
+
+.lb-nav a.lb-next:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+
+.lb-dataContainer {
+  margin: 0 auto;
+  padding-top: 5px;
+  *zoom: 1;
+  width: 100%;
+  -moz-border-radius-bottomleft: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  -moz-border-radius-bottomright: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.lb-dataContainer:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.lb-data {
+  padding: 0 4px;
+  color: #ccc;
+}
+
+.lb-data .lb-details {
+  width: 85%;
+  float: left;
+  text-align: left;
+  line-height: 1.1em;
+}
+
+.lb-data .lb-caption {
+  font-size: 13px;
+  font-weight: bold;
+  line-height: 1em;
+}
+
+.lb-data .lb-number {
+  display: block;
+  clear: left;
+  padding-bottom: 1em;
+  font-size: 12px;
+  font: normal 12px 'Oxygen', sans-serif;
+  color: #999999;
+}
+
+.lb-data .lb-close {
+  display: block;
+  float: right;
+  width: 30px;
+  height: 30px;
+  background: url(../images/lightbox/close.png) top right no-repeat;
+  text-align: right;
+  outline: none;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
+  opacity: 0.7;
+  -webkit-transition: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  -o-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+
+.lb-data .lb-close:hover {
+  cursor: pointer;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+
+/*end of lighbox effects*/
