--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,43 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
-
+td.right {
+    text-align: right;
+}
+th.right {
+    text-align: right;
+    border-bottom: 1px solid #DDD;
+}
+td.left {
+    padding-left: 10px;
+    text-align: left;
+}
+table.order-details {
+    /*width: 800px;*/
+}
+.order-details td,
+.order-details th {
+    border-bottom: 1px solid #EEE;
+}
+td .order-products {
+    margin-bottom: 5px;
+}
+.transaction-log {
+    margin: 20px 0;
+}
+.transaction-log h3 {
+    margin-bottom: 15px;
+    font: bold 12px 'Oxygen', sans-serif;
+    color: #666;
+}
+div.ipn-req {
+    width: 400px;
+    height: auto;
+    padding: 7px;
+    overflow: auto;
+    border: 1px solid #EEE;
+    font: normal 12px 'Oxygen', sans-serif;
+}
 /*lighbox effects*/
 
 body:after {
@@ -562,10 +598,12 @@ input[type="text"].search-box {
     background-color: #020202;
 }
 .offer-book {
-    height: 100%;
+    min-height: 133px;
+    max-height: 133px;
 }
 .offer-img {
     width: 660px;
+    text-align: center;
     float: left;
 }
 .offer-desc {
@@ -585,58 +623,59 @@ input[type="text"].search-box {
 }
 
 /*slideshow styles*/
-.active-slide {
+.slide {
     position: relative;
     float: left;
     width: 773px;
     height: 339px;
     margin: 0 12px 25px 0;
     border: 1px solid #F7F6F6;
-    background-color: #FFF;
+    background-color: #020202;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-.active-slide-info {
-    position: absolute;
-    width: 394px;
-    height: 159px;
-    top: 50%;
-    left: 50%;
-    margin-top: -79.5px;
-    margin-left: -197px;
-    background-color: rgba(219, 221, 222, 0.45);
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#4cD8DADB, endColorstr=#4cD8DADB)";
+.slide a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-indent: -9999px;
+    /*visibility: hidden;*/
 }
-.active-slide-info h3 {
-    margin-top: 37px;
-    font: normal 35px 'Oxygen', sans-serif;
-    text-align: center;
-    text-transform: uppercase;
-    color: #C32929;
+#slideshow {
+    width: 775px;
+    height: 330px;
+    overflow: hidden;
+    float: left;
 }
-.slide-thumbs {
+#slides-nav {
     width: 171px;
     float: right;
 }
-.slide-thumbs li {
+#slides-nav li {
+    height: 77px;
+    text-align: center;
     margin-bottom: 5px;
+    border: 1px solid #EEE;
+    background-color: #020202;
 }
-.slide-thumbs li.last {
-    margin-bottom: 0;
+#slides-nav li a {
+    display: block;
+    text-align: center;
 }
-.active-thumb {
+#slides-nav .activeSlide {
     position: relative;
 }
-.active-thumb span.overlay {
+#slides-nav .activeSlide a {
     position: absolute;
     top: 0;
     left: 0;
     display: block;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,.6);
+    background-color: #020202;
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
 }
-
-.active-thumb:after {
+#slides-nav .activeSlide:after {
     content: " ";
     position: absolute;
     height: 0;
@@ -650,6 +689,7 @@ input[type="text"].search-box {
     border-width: 7px;
 }
 
+
 /*our books section*/
 
 .sub-header {
@@ -658,14 +698,23 @@ input[type="text"].search-box {
     text-transform: uppercase;
     color: #1A1A1A;
 }
+.sub-header.our-product {
+    margin-top: 20px;
+}
 .our-books {
     margin-bottom: 40px;
 }
 .our-books .item {
-    width: 78px;
+    width: 76px;
     height: 116px;
+    border: 1px solid #DDD;
     margin-right: 32px;
+    text-align: center;
     float: left;
+}
+.our-books .item img {
+    max-width: 76px;
+    max-height: 114px;
 }
 .our-books .item.last {
     margin-right: 0;
@@ -848,7 +897,7 @@ input[type="checkbox"] {
 .category-status {
     width: 300px;
     margin-top: 2px;
-    padding: 7px 10px;
+    padding: 7px 10px 2px 10px;
     border: 1px solid #BDC7D8;
     border-radius: 4px;
 }
@@ -903,13 +952,15 @@ input[type="checkbox"] {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 25px;
-    padding-top: 9px;
+    height: 150px;
     text-align: center;
     background-color: rgba(0,0,0,0.5);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
 }
 .product-image-delete a {
-    font: normal 13px 'Oxygen', sans-serif;
+    display: block;
+    padding-top: 10px;
+    font: bold 12px 'Oxygen', sans-serif;
     color: #FFF;
 }
 .product-image img {
@@ -1083,6 +1134,7 @@ input[type="checkbox"] {
     text-align: center;
 }
 .px-gallery-img img {
+    max-width: 98px;
     max-height: 98px;
 }
 .px-tags {
@@ -1201,11 +1253,19 @@ input[type="checkbox"] {
 }
 .order-terms {
     margin: 40px 0 10px 0;
-    text-align: center;   
+    text-align: center;
     font: normal 12.5px 'Oxygen', sans-serif;
     color: #777;
 }
 .payment-center-btn {
     margin: 40px 0 10px 0;
     text-align: center;
+}
+.dash-header {
+    margin: 15px 0;
+    font: bold 12.5px 'Oxygen', sans-serif;
+    color: #777;
+}
+.my-orders .dash-header {
+    margin-top: 50px;
 }
