--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,22 @@ div.ipn-req {
     font: normal 12px 'Oxygen', sans-serif;
 }
 
+/*sticky footer*/
+
+html,body {
+    height: 100%;
+    margin: 0;
+}
+.outer-wrapper {
+    min-height: 100%;
+    margin-bottom: -26px;
+}
+.outer-wrapper:after {
+    content: "";
+    display: block;
+    height: 26px;
+}
+
 /*lighbox effects*/
 
 body:after {
